# custom-rclone-webui

./: .gitignore  MANIFEST.in  README.rst  requirements.txt  setup.cfg
custom_rclone_webui/: manage.py
custom_rclone_webui/custom_rclone_webui/: asgi.py  settings.py  urls.py  wsgi.py
custom_rclone_webui/webui/: forms.py  models.py  urls.py  views.py
custom_rclone_webui/webui/templates/webui/: base.html  dashboard.html
custom_rclone_webui/webui/templatetags/: list_tags.py
custom_rclone_webui/webui/utils/: _rclone_auto.pyw  cmd_options.ini  rclone.py
