[metadata]
name = custom-rclone-webui
version = 1.0
description = Web-based GUI for an Rclone wrapper
long_description = file: README.rst
url = https://github.com/huenique/custom-rclone-webui
author = Hju Kneyck M. Flores
author_email = hjucode@gmail.com
license = MIT License
classifiers =
    Environment :: Web Environment
    Framework :: Django :: 3.1
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows :: Windows 10
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8.7
install_requires = 
    django >= 3.1.5
    django-crispy-forms >= 1.10.0
    django-cleanup >= 5.1.0